fix dashboard width and alignment problem

--- a/webroot/css/dashboard.css
+++ b/webroot/css/dashboard.css
@@ -63,7 +63,7 @@
 .left-right {
 	margin-top: 10px;
 	padding-bottom: 10px;
-	width: 377px; /*371*/
+	width: 372px;
 	float: left;
 	display: block;
 }
